# Biodosimetry

./: .gitignore  README.md  TPL-빅데이터기반 질병예측 프로젝트 주제 선정_20247433 양수산.pptx  app.py  ocr_pdfs.py  pdf_lookup.py  pyproject.toml  recommendation_helpers.py  requirements.txt  rule_engine.py  rules.json  run_app.bat  scenario_store.py
data/: guidelines.json  rule_engine_spec.json  sample_scenarios.json
data/pdfs_ocr/: EPR-Biodosimetry 2011_web_extracted.txt  EPR-Medical (2024)_web_extracted.txt  multibiodose-guidance-small_extracted.txt  ncw155_extracted.txt
data/pdfs_to_ocr/: README.txt
tests/: test_additional_features.py  test_review_fixes.py
